# SickleblowOne

./: CMakeLists.txt  DissenyGeneral.tex  README.md
directrius/: disseny_mapes.txt  disseny_personatges.txt  estructura_directoris.txt
src/: .ycm_extra_conf.py  CMakeLists.txt  CameraMan.cpp  CameraMan.h  ClassLoader.cpp  ClassLoader.h  GameSetup.cpp  GameSetup.h  Interface.h  Level.cpp  Level.h  LevelRenderer.cpp  LevelRenderer.h  PDebugger.cpp  PDebugger.h  PLevel.cpp  PLevel.h  PPlayer.cpp  PPlayer.h  Player.cpp  Player.h  PlayerRenderer.cpp  PlayerRenderer.h  clientMain.cpp
src/configScripts/: CMakeLists.txt  kbControls  kbControls.ini  resources.cfg
src/gamesetups/: CMakeLists.txt  GameSetupLocalProva.cpp  GameSetupLocalProva.h
src/iniparser/: iniparser.h
src/interfaces/: CMakeLists.txt  KeyboardInterface.cpp  KeyboardInterface.h
utils/io_data_lvc/: __init__.py  export_lvc.py
